--- a/task-3.html
+++ b/task-3.html
@@ -10,8 +10,8 @@
   <body>
     <p><a href="./index.html">Go back</a></p>
 
-    <input type="text" id="name-input" placeholder="Please enter your name" />
-    <h1>Hello, <span id="name-output">Anonymous</span>!</h1>
+    <input type="text" class="js-name-input" id="name-input" placeholder="Please enter your name" />
+    <h1>Hello, <span id="name-output" class="js-name-output">Anonymous</span>!</h1>
 
     <script src="./js/task-3.js" type="module"></script>
   </body>
