--- a/task-4.html
+++ b/task-4.html
@@ -13,13 +13,13 @@
     <form class="login-form">
       <label>
         Email
-        <input type="email" name="email" />
+        <input class="input-aria" type="email" name="email" />
       </label>
       <label>
         Password
-        <input type="password" name="password" />
+        <input class="input-aria" type="password" name="password" />
       </label>
-      <button type="submit">Login</button>
+      <button class="btn-submit" type="submit">Log in</button>
     </form>
 
     <script src="./js/task-4.js" type="module"></script>
