--- a/task-6.html
+++ b/task-6.html
@@ -9,15 +9,15 @@
   </head>
   <body>
     <p><a href="./index.html">Go back</a></p>
-
-    <div id="controls">
-      <input type="number" min="1" max="100" step="1" />
-      <button type="button" data-create>Create</button>
-      <button type="button" data-destroy>Destroy</button>
+<div class="colors-container">
+    <div id="controls"  class="controls-container">
+      <input class="input-controls" type="number" min="1" max="100" step="1" />
+      <button  class="btn-colors" type="button" data-create>Create</button>
+      <button class="btn-colors red-btn-colors" type="button" data-destroy>Destroy</button>
     </div>
 
-    <div id="boxes"></div>
-
+    <div class="boxes-container controls-container" id="boxes"></div>
+</div>
     <script src="./js/task-6.js" type="module"></script>
   </body>
 </html>
