--- a/task-3.html
+++ b/task-3.html
@@ -7,12 +7,13 @@
     <title>Task 3</title>
     <link rel="stylesheet" href="./css/common.css" />
   </head>
-  <body>
+  <body >
+    
     <p><a href="./index.html">Go back</a></p>
-
-    <input type="text" class="js-name-input" id="name-input" placeholder="Please enter your name" />
-    <h1>Hello, <span id="name-output" class="js-name-output">Anonymous</span>!</h1>
-
+    <div class="window">
+      <input type="text" class="js-name-input" id="name-input" placeholder="Please enter your name" />
+      <h1 class="welcome-box">Hello, <span id="name-output" class="js-name-output">Anonymous</span>!</h1>
+    </div>
     <script src="./js/task-3.js" type="module"></script>
   </body>
 </html>
