--- a/task-5.html
+++ b/task-5.html
@@ -11,8 +11,10 @@
     <p><a href="./index.html">Go back</a></p>
 
     <div class="widget">
+      <div class="widget-content">
       <p>Background color: <span class="color">-</span></p>
-      <button  type="button" class="change-color">Change color</button>
+      <button  type="button" class="btn-change-color">Change color</button>
+      </div>
     </div>
 
     <script src="./js/task-5.js" type="module"></script>
